[package]
name = "quartz-messenger"
version = "0.2.0"
edition = "2021"
author = "Demir Yerli <mrquantumoff@protonmail.com>"
license = "MIT"
repository = "https://github.com/mrquantumoff/quartz"
keywords = ["messenger", "cli", "privacy"]
categories = ["command-line-utilities"]
description = "A command-line utility for messaging based on libquartz."



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libquartz = { git = "https://github.com/Bultek/libquartz.git", version="0.1.0" }
clap = "3.1"
colored = "2.0"
tokio = {version = "1.19.2", features = ["full"]}
