[package]
name = "quartz-messenger"
version = "0.2.0"
edition = "2021"
author = "Demir Yerli <mrquantumoff@protonmail.com>"
license = "MIT"
repository = "https://github.com/mrquantumoff/quartz"
keywords = ["messenger", "cli", "privacy"]
categories = ["command-line-utilities"]
description = "A command-line utility for messaging based on libquartz."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libquartz = { version="0" }
clap = "3.2"
colored = "2"
tokio = {version = "1.19", features = ["full"]}
